--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 * {
-  /*font-family: Inter, Avenir, Helvetica, Arial, sans-serif;*/
+  font-family: 'Montserrat', Helvetica, Arial, sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
