--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,15 @@
   box-sizing: border-box;
 }
 
+@media (prefers-reduced-motion: no-preference) {
+  html {
+      scroll-behavior: smooth;
+  }
+}
+:target {
+  scroll-margin-top: 0;
+}
+
 body {
   background-color: #EEF2F4;
 }
